# book-empy-engine

./: .gitignore  CMakeLists.txt  EmpyLinux.sh  EmpyWin.bat  LICENSE  README.md  conanfile.txt
EmpyEditor/: CMakeLists.txt
EmpyEditor/src/: Editor.cpp
EmpyEditor/src/Context/: Context.h  Events.h  Helpers.h  Inputs.h  Widget.h
EmpyEditor/src/Controls/: Camera.h  DirectLight.h  EnttInfo.h  IControl.h  Transform.h
EmpyEditor/src/Vendors/: FA.h
EmpyEditor/src/Windows/: Hierarchy.h  Inspector.h  MenuBar.h  Resource.h  Viewport.h
EmpyEngine/: CMakeLists.txt
EmpyEngine/includes/: Empy.h
EmpyEngine/includes/Application/: Application.h  Context.h  Interface.h
EmpyEngine/includes/Auxiliaries/: Assets.h  ECS.h  Serializer.h
EmpyEngine/includes/Common/: Core.h  Event.h  YAML.h
EmpyEngine/includes/Graphics/: Renderer.h
EmpyEngine/includes/Graphics/Buffers/: Frame.h  Mesh.h  Vertex.h
EmpyEngine/includes/Graphics/Models/: Animation.h  Animator.h  Helper.h  Model.h
EmpyEngine/includes/Graphics/Shaders/: BRDF.h  Bloom.h  Final.h  Irradiance.h  PBR.h  Phong.h  Prefiltered.h  Shader.h  Shadow.h  SkyMap.h  Skybox.h
EmpyEngine/includes/Graphics/Textures/: Texture.h
EmpyEngine/includes/Graphics/Utilities/: Data.h  Quad.h  Skybox.h
EmpyEngine/includes/Physics/: Callback.h  Context.h  Helpers.h  Utilities.h
EmpyEngine/includes/Scripts/: Context.h  Helpers.h  Utilities.h
EmpyEngine/includes/Window/: Events.h  Inputs.h  Window.h
EmpyEngine/src/: Empy.cpp
EmpyGame/: CMakeLists.txt
EmpyGame/src/: Game.cpp
EmpyScript/: TestScript.lua
EmpyScript/EmpyEngine/: Core.lua  Input.lua
Resources/Models/Models/: Walking.fbx  cube.fbx  sphere.fbx
Resources/Projects/: assets.yaml  scene.yaml
Resources/Shaders/: bloom.glsl  brdf.glsl  final.glsl  irradiance.glsl  pbr.glsl  phong.glsl  prefiltered.glsl  shadow.glsl  skybox.glsl  skymap.glsl
